updated build, wrapped up test coverage